foo-corp/namespaces/online/shipping-app-backend/netpol-allow-backend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-allow
spec:
  podSelector:
    matchLabels:
      app: redis
      tier: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guestbook
          tier: frontend
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
